# FrontalFaces

./: .gitignore  Makefile  README.md  README.txt  demo.py  main.cpp  main_camera.cpp  test.cpp
lib/: cpdb_compute.cpp
libs/: cpdb_compute.cpp
src/: cpdb_compute.cpp  flandmark_detector.cpp  flandmark_detector.h
verify/: CMakeLists.txt  create_csv.py  del_img.py  facerec_demo.cpp  orl.csv
verify/facesdb/: process.py  trav.py
video/: CMakeLists.txt  main.cpp  proc_video.py
